namespace TH_lab.Units.Primitive_objects;

public enum FlightClass
{
    Business,
    Economy,
    First
}