namespace TH_lab.Units.Primitive_objects;

public class Pilot
{
    public string Name { get; set; }

    public Pilot(string name)
    {
        Name = name;
    }
}