namespace TH_lab.Units.Primitive_objects;

public class Stewardess
{
    public  string  Name { get; set ; }
    public int Age { get; set; }

    public Stewardess(string name, int age)
    {
        Name = name;
        Age = age;
    }
}